添加制纸桌的系统设计。

--- a/doc/原型设计.md
+++ b/doc/原型设计.md
@@ -3,8 +3,10 @@
 种纸草 => 制纸 => 写书 => 工作阅读/娱乐阅读 => 烧书
 
 * 增加一种物品：纸
-    * 增加一种作物：纸草
-    * 增加一种生产建筑：制纸机，用于由纸草生成纸
+    * 增加一种生产建筑：制纸桌，用于由木材生成纸
+        * 生产速度与手工技能相关
+        * 不需要通电，也不可以通电
+        * 可由金属类/木材建造制纸桌
 * 增加一类物品：书
     * 增加一种生产建筑：写作桌，用于由纸生成书
     * 书具有随机的名字
