添加书本身的构造的系统设计。

--- a/doc/系统设计.md
+++ b/doc/系统设计.md
@@ -1,6 +1,7 @@
 # 纸
 仿照ComponentIndustrial（也就是零部件的def）添加一个新的def即可。
 
+
 # 制纸桌
 ## 建筑：制纸桌
 仿照FabricationBench（也就是造零部件的桌子的def）添加一个新的def即可
@@ -12,3 +13,26 @@
 为了让小人能够去执行这个配方，我们需要指定一个WorkGiver给我们的制纸桌。仿照DoBillsFabricationBench（也就是零部件桌子的WorkGiver的def）添加一个新的def即可。注意要在fixedBillGiverDefs节点中添加制纸桌的def，从而使得这个WorkGiverDef针对的是我们的制纸桌。
 
 * WorkGiver的def相当于是描述小人执行该配方时的动作，而配方的def是描述该配方的生产方式，制纸桌只是单纯描述一个建筑。
+
+
+# 书
+## 书本身
+因为书这个种类的物品和rimworld中已有的物品基本是两套体系的东西，所以应该仿照BaseWeapon添加新的def：BaseBook。
+
+有了BaseBook后再衍生地派生出Book_xxx各式各样的图书。可以参照Gun_Revolver进行派生。
+
+## 书的可制作性
+需要添加recipeMaker节点。TODO：其实这个节点具体有啥用我也还不清楚，需要调查一下。
+
+## 书不可堆叠
+因为stackLimit默认值为1，所以不修改它就可以了。
+
+## 书的名字
+通过在BaseBook的comps节点下添加一项Class为CompProperties_Art的项来实现。该comp会为物品添加名字，通过将minQualityForArtistic设为Awful来实现所有书都有名字。
+
+TODO:不过这部分还需要一套属于书的nameMaker和descriptionMaker。
+
+注意还要添加ITab_Art作为inspectorTabs的一项，因为需要查看艺术
+
+## 书的质量属性本身
+添加CompQuality组件即可。
